--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pixcollector",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "api/app.js",
   "repository": "https://github.com/nkoshkarov/quadratic.git",
   "author": "nkoshkarov",
   "license": "MIT",
@@ -12,7 +12,7 @@
     "zip-stream": "^2.1.3"
   },
   "scripts": {
-    "start": "node app.js",
+    "start": "node api/app.js",
     "heroku-postbuild": "cd client && yarn && yarn run build"
   }
 }
