--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
   "scripts": {
     "start": "node api/app.js",
     "heroku-postbuild": "cd client && yarn && yarn run build"
+  },
+  "engines": {
+    "node": "10.15.1",
+    "yarn": "1.9.4"
   }
 }
