--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "body-parser": "^1.19.0",
     "connect-mongo": "^3.2.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.7",
     "request": "^2.88.2",
     "zip-stream": "^2.1.3"
