--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "fetch-intercept": "^2.3.1",
     "fetch-interceptor": "^1.1.0",
     "node-sass": "^4.13.1",
     "path-to-regexp": "^6.1.0",
