--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
   },
   "scripts": {
     "start": "node api/app.js",
-    "heroku-postbuild": "cd client && yarn && yarn run build"
+    "heroku-postbuild": "cd ui && yarn && yarn run build --prod"
   },
   "engines": {
     "node": "10.15.1",
     "npm": "6.14.2",
     "yarn": "1.9.4"
-  }
+  },
+  "devDependencies": {}
 }
