--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "scripts": {
     "start": "node api/app.js",
-    "heroku-postbuild": "cd ui && npm install && npm build"
+    "heroku-postbuild": "cd ui && npm install && npm run build"
   },
   "engines": {
     "node": "10.15.1",
