--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "engines": {
     "node": "10.15.1",
     "npm": "6.14.2",
-    "yarn": "1.9.4"
+    "yarn": "1.9.4",
+    "@angular/cli": "9.1.1"
   },
   "devDependencies": {}
 }
