--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
   "engines": {
     "node": "10.15.1",
     "npm": "6.14.2",
-    "yarn": "1.9.4",
-    "@angular/cli": "9.1.1"
+    "yarn": "1.9.4"
   },
   "devDependencies": {}
 }
