--- a/ui/package.json
+++ b/ui/package.json
@@ -14,6 +14,7 @@
     "@angular/cli": "~9.1.1",
     "@angular/compiler-cli": "~9.1.1",
     "@angular-devkit/build-angular": "~0.901.1",
+    "typescript": "~3.8.3",
     "@angular/animations": "~9.1.1",
     "@angular/cdk": "^9.2.1",
     "@angular/common": "~9.1.1",
