UI save & like features test, auth upd

--- a/ui/angular.json
+++ b/ui/angular.json
@@ -32,7 +32,7 @@
               "src/styles.scss"
             ],
             "scripts": [
-              "src/app/vk-sdk.js"
+              "src/vk-sdk.js"
             ]
           },
           "configurations": {
