--- a/ui/angular.json
+++ b/ui/angular.json
@@ -31,9 +31,7 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": [
-              "src/vk-sdk.js"
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
