--- a/ui/angular.json
+++ b/ui/angular.json
@@ -31,7 +31,9 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "src/vk-sdk.js"
+            ]
           },
           "configurations": {
             "production": {
